--- a/gb/24/4/4/n14218315.md
+++ b/gb/24/4/4/n14218315.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【杨延昭传奇】火牛阵大败韩昌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14218323-1712244983377-600x400.jpg" />
 <h6>杨延昭传奇-火牛阵。（清玉／大纪元）
@@ -18,13 +18,13 @@
 <p>杨延昭带着将士们回礼致意，并下马与牧人闲话家常。谈笑间牧人说道：这牛啊！要成为耕牛可不容易，我与几位哥儿们花了好大功夫，才能让它习惯背犁耕作，要顺应它的性情训练还要按时的给它吃好的草料，我跟着父亲学了十多年了才抓到这窍门呢！这实在是个学问啊！</p>
 <p>听着听着，杨延昭突然灵机一动，想到了破敌之策！他向牧人行礼拜谢，说道：感谢阁下，破敌关键在于这些牛儿了，要借你这些牛一用了。</p>
 <p>他下令给牧人一笔钱粮作为征集牛只的费用，数量不够的还让将士们四处收购，短短几天已征集到了上千头牛。接着他带领将士在益津关的关口北方前缘，顺着地势建了一道南北狭长数里的阵地，辽军要攻城必定要经过此阵地，他在四周设上围栏，将这上千头牛安排在此地训练，为火牛阵做准备。</p>
-<figure id="attachment_14229463" aria-describedby="caption-attachment-14229463" style="width: 339px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14229463-8efc4e3a1a041cab80d1d009ef56d0d7.jpg"><img class=" wp-image-14229463" src="https://i.epochtimes.com/assets/uploads/2024/04/id14229463-8efc4e3a1a041cab80d1d009ef56d0d7.jpg" alt="" width="339" b="482" /></a><figcaption id="caption-attachment-14229463" class="wp-caption-text">火牛装备，出自宋 曾公亮和丁度《武经总要》。（公有领域）</figcaption></figure>
+<figure id="attachment_14229463" aria-describedby="caption-attachment-14229463" style="width: 339px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14229463-8efc4e3a1a041cab80d1d009ef56d0d7.jpg"><img decoding="async" class=" wp-image-14229463" src="https://i.epochtimes.com/assets/uploads/2024/04/id14229463-8efc4e3a1a041cab80d1d009ef56d0d7.jpg" alt="" width="339" b="482" /></a><figcaption id="caption-attachment-14229463" class="wp-caption-text">火牛装备，出自宋 曾公亮和丁度《武经总要》。（公有领域）</figcaption></figure>
 <p>杨延昭找来牧人们教导将士训练牛只，他做了许多稻草人，让其穿上辽军的盔甲，再制作牛爱吃的饲料藏在盔甲下，让牛只习惯要设法扒开盔甲吃饲料。又将尖刀、长枪绑在牛身上，训练牛只直线的往前方冲锋刺穿草人，打算到时再将牛尾点火，进一步增加牛只向前的速度。</p>
 <p>一段时间后，宋军再以木马装上铁甲及草人，模仿辽军骑兵，让牛实际学习对着其冲锋，使牛只习惯破坏木马及草人后才能吃到饲料，就这样循序渐进，周而复始的训练一个月以后，这上千头牛只已经逐渐习惯了这种冲击型的作战方式。</p>
 <h2><strong>韩昌率五万铁甲雄兵卷土重来</strong></h2>
 <p>就在杨延昭紧锣密鼓的备战期间，北方的辽国也蓄势待发，准备南侵。</p>
 <p>在上次铁甲兵被击破后，韩昌这回又再度带着耶律休哥、耶律沙、大鹏等十余位将领，率着五万铁甲骑兵大军来到益津关叫战。杨延昭早已得知消息，率领着岳胜、杨兴、孟良等诸位将领，布好阵式在关前新阵地等候。</p>
-<figure id="attachment_14229449" aria-describedby="caption-attachment-14229449" style="width: 292px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14229449-271aa80652c0f114e2ffc6a41345faa2.jpg"><img class=" wp-image-14229449" src="https://i.epochtimes.com/assets/uploads/2024/04/id14229449-271aa80652c0f114e2ffc6a41345faa2.jpg" alt="" width="292" b="453" /></a><figcaption id="caption-attachment-14229449" class="wp-caption-text">《绣像南北宋志传》-耶律沙。（公有领域）</figcaption></figure>
+<figure id="attachment_14229449" aria-describedby="caption-attachment-14229449" style="width: 292px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14229449-271aa80652c0f114e2ffc6a41345faa2.jpg"><img decoding="async" class=" wp-image-14229449" src="https://i.epochtimes.com/assets/uploads/2024/04/id14229449-271aa80652c0f114e2ffc6a41345faa2.jpg" alt="" width="292" b="453" /></a><figcaption id="caption-attachment-14229449" class="wp-caption-text">《绣像南北宋志传》-耶律沙。（公有领域）</figcaption></figure>
 <p>韩昌见着杨延昭，便骂道：“杨六郎！上回大意败给你了，这回我不会再上当了，有胆就与我的铁甲骑兵正面作战，别老是玩些小花招。”</p>
 <p>杨延昭回声道：“韩昌！兵不厌诈，自古皆然。看着，我早就在关前摆好了阵式，若你破不了就别想打入关口，咱们就正面交锋好好地打一场吧！ ”</p>
 <p>这时耶律休哥、耶律沙也冲出来叫阵，骂道：“杨六郎！上回杀了我兄弟耶律庆，还有无数我大辽将士也死于你的诡计，这回我要你血债血偿，让你瞧瞧我们铁甲大军的厉害！”</p>
@@ -39,43 +39,42 @@
 <p>参考史料：</p>
 <p>《杨六郎威镇三关口》河北人民出版社1984年出版 赵福和 李巨发 等人 搜集<br />
 《杨家将外传》河北少年儿童出版社 1986年出版 赵云雁? 搜集整理</p>
-<p>点阅【<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E3%80%90%E6%A5%8A%E5%BB%B6%E6%98%AD%E5%82%B3%E5%A5%87%E3%80%91.md#1">杨延昭传奇</a>】相关文章。@*</p>
+<p>点阅【<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%E3%80%90%E6%A5%8A%E5%BB%B6%E6%98%AD%E5%82%B3%E5%A5%87%E3%80%91.md#1">杨延昭传奇</a>】相关文章。@*</p>
 <p>责任编辑：王愉悦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/3/n14194007.md#1">【杨延昭传奇】杨门女将大破铁甲骑兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/27/n14190192.md#1">陆上海眼通汪洋  旧江陵城海眼一开洪水来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175309.md#1">“鬼魂申冤”有真假 看他们如何办案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165397.md#1">商人忘恩负义 术士施法术翻转结局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150007.md#1">受天帝责罚化身为燕 结缘修道人家的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163155.md#1">人怕鬼还是鬼怕人 他们如何让鬼魅不敢侵犯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154327.md#1">穿越时空而来 神秘赊刀人二则预言引起共振</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132350.md#1">他进到了寺院的壁画中  老僧说了一句“幻由心生”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258189.md#1">救人性命 自己命运也改变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/29/n2280053.md#1">林孝廉得神明赞许和庇佑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/11/n2425958.md#1">只因诗两句 夺却状元科</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/9/n14244811.md#1">抓周真能预测命运？北宋大将曹彬小时候抓到了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241921.md#1">民间传说：土地神站起来啦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/1/n14238363.md#1">动非分之念 书生从才貌双全到双目失明</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/3/n14194007.md#1">【杨延昭传奇】杨门女将大破铁甲骑兵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/27/n14190192.md#1">陆上海眼通汪洋  旧江陵城海眼一开洪水来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/7/n14175309.md#1">“鬼魂申冤”有真假 看他们如何办案</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225522.md#1">“功成画麟阁” 古代皇帝为功臣画像的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221459.md#1">康熙皇帝和《红楼梦》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226365.md#1">【未解之谜】三体迷思（上）：是什么让顶尖科学家们生无可恋？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187753.md#1">【古韵流芳】共饮长江水的相思情意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/18/n14228140.md#1">谷雨节气到：赏花王 饮香茶王 食谷雨汤补肝明目养生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14230177.md#1">【时事军事】“透明战场”帮乌克兰挺过困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/21/n14230224.md#1">【新闻五人行】伊以冲突 中共怕了 曝4大顾忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231049.md#1">【新闻五人行】12记重拳 美反击中共有缘由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229535.md#1">千载难逢 今年肉眼可见恒星爆发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229958.md#1">雷雨轰炸全台！台湾各地未来一周下雨状况一览</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229746.md#1">中国富豪覃辉5月9日将被逐出美国 不回中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14230112.md#1">大五毛司马南主演新片翻车 首日票房仅50万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229622.md#1">吴亦凡入狱三年 突然冲上热搜与钱有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229599.md#1">《美国偶像》歌手曼迪莎家中骤逝 享年47岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229528.md#1">宫崎骏获选《时代杂志》年度百大影响力人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229283.md#1">黄姵嘉丧父泪谈分手 邱昊奇回应：尊重她的感受</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229937.md#1">专家：在花园里种5种植物 老鼠会逃之夭夭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/16/n14227098.md#1">50岁以下肠癌发病率上升 这种合成补充剂是祸首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221069.md#1">木瓜改善肠道健康还能抗癌 但要避免买这种木瓜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/18/n14228792.md#1">“帝王菜”一把春菊 护本固元 清心安神</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/21/n14230665.md#1">好消息！调查：近八成屋主希望尽早卖房</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282412.md#1">【菁英论坛】俄间谍创办中共 一大代表逾半退党</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281733.md#1">【秦鹏观察】中共央行借入国债 无锚印钞来了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281757.md#1">【远见快评】“火箭军”又出大事 秦刚有下落？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278998.md#1">分析：台商撤离冲击中国经济 也令中共尴尬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280888.md#1">沈舟：中共海军急缺战列舰 但从未造过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280385.md#1">《怪兽8号》影评：乱吃东西竟成当英雄的机遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281728.md#1">被问赵又廷私下如何叫她 高圆圆回答笑翻全场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280722.md#1">空服员希望乘客在飞机上别做这件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/4/n14218315.htm">【杨延昭传奇】火牛阵大败韩昌</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218315.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/4/n14218315.htm">【杨延昭传奇】火牛阵大败韩昌</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/4/n14218315.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
